fix broken styles

--- a/src/style/style.module.scss
+++ b/src/style/style.module.scss
@@ -35,8 +35,9 @@
 }
 
 .congratsformButton{
+  display: flex;
   position: relative;
-  left: 15rem;
+  left: 25rem;
 }
 
 .inputbox {
